fix overflow of popup card

--- a/frontend/src/components/popupCard.css
+++ b/frontend/src/components/popupCard.css
@@ -15,6 +15,7 @@ label {
 }
 
 .desc{
+    overflow-y: scroll;
     font-size: 14px;
 }
 
